# pdf-scientist

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.toml  directory_tree_L4-07092026.txt  docker-compose.yml  pyproject.toml
.archive/: Observations-from-Repository-Document-Review-07092026.md  PDF-Processor-MongoDB-JavaScript-CL.txt  Reply to Questions and Vision on pdf-Scientist 06292026.txt  old-project-structure_07092026.txt  process_pdf.py  product.md  requirements.txt  structure.md  styles.css
.archive/steering/: structure.md
.docs/: EPA-Knowledge-Graph-Plan.md  PDF-Processor-MongoDB-VSCode.txt  PDF-Processor-MongoDB.txt  Plan for Building a Local Semantic Vector Database App for PDF Files.txt  pdf processor.txt
.docs/.kiro/steering/: product.md  structure.md  tech.md
.github/workflows/: ci.yml
.kilo/plans/: 1783928794431-phase2-citation-graph-plan.md  1783928794431-remaining-work-checklist.md
crates/epa-kg-api/: Cargo.toml
crates/epa-kg-api/src/: error.rs  handlers.rs  lib.rs  routes.rs  state.rs
crates/epa-kg-core/: Cargo.toml
crates/epa-kg-core/src/: config.rs  error.rs  lib.rs
crates/epa-kg-graph/: Cargo.toml
crates/epa-kg-graph/src/: engine.rs  extractor.rs  lib.rs  models.rs  store.rs
crates/epa-kg-graph/tests/: golden.rs
crates/epa-kg-graph/tests/golden/: 3500C.json  8270E.json
crates/epa-kg-ingest/: Cargo.toml
crates/epa-kg-ingest/src/: main.rs
crates/epa-kg-tauri/: Cargo.toml  tauri.conf.json
crates/epa-kg-tauri/src/: main.rs
docker/: entrypoint.sh
docs/: api.md  architecture.md  contributing.md  development.md  ingestion-guide.md  phase-1-ingestion.md
docs/chromadb_docs/: ChromaDB Docs - Schema, Schema Basics, and Schema Overview.txt  ChromaDB_Docs-Quotas.md  Chroma_+_FastAPI.md  Configure_Chroma_SDK.md  Copy a local Chroma database.md  chromadb_initial_llm_prompt.md
python/ingestion/: __init__.py  chroma_client.py  chunking.py  config.py  embeddings.py  main.py  metadata.py  requirements.txt
python/ingestion/tests/: test_ingestion.py
python/ingestion/tests/integration/: test_chroma_integration.py
python/ingestion/tests/unit/: test_chroma_client.py  test_chroma_client_extended.py  test_chunker.py  test_chunking.py  test_config.py  test_embeddings.py  test_embeddings_extended.py  test_main.py  test_main_extended.py  test_metadata.py  test_metadata_extended.py
