[workspace]
resolver = "2"
members = [
    "crates/epa-kg-core",
    "crates/epa-kg-ingest",
    "crates/epa-kg-api",
    "crates/epa-kg-graph",
    "crates/epa-kg-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/AlexJ-StL/epa-knowledge-graph"
authors = ["Alex Johnson <alex@alexj-stl.com>"]
description = "EPA Knowledge Graph - Semantic search for environmental methods"

[workspace.dependencies]
# Core
tokio = { version = "1.40", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version = "0.14", features = ["toml", "ini"] }
clap = { version = "4.5", features = ["derive", "env"] }
uuid = { version = "1.8", features = ["serde", "v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"

# HTTP / API
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "normalize-path"] }
hyper = { version = "1.2", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "json"] }
chromadb = "0.2"

# PDF / Text
pdfium = "0.6"
lopdf = "0.34"
regex = "1.10"
petgraph = "0.6"

# Testing
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true