[project]
name = "epa-knowledge-graph"
version = "0.1.0"
description = "EPA Knowledge Graph - Python Ingestion Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "pymupdf==1.24.14",
    "pdfplumber==0.11.7",
    "openai==1.54.0",
    "httpx==0.28.1",
    "chromadb==0.5.9",
    "pyyaml==6.0.1",
    "rich==13.9.4",
    "tqdm==4.66.5",
    "tenacity==8.5.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.0",
    "mypy==1.11.0",
    "black==24.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]
include = ["ingestion*"]

[dependency-groups]
dev = [
    "ruff==0.6.0",
    "mypy==1.11.0",
    "black==24.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]
exclude = [".venv", "target", "crates", ".archive"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = [".venv", "target", "crates", ".archive"]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = ['.venv', 'target', 'crates', '.archive']

[tool.pytest.ini_options]
testpaths = ["python/ingestion/tests"]
pythonpath = ["python"]
asyncio_mode = "auto"