[package]
name = "epa-kg-graph"
version = "0.1.0"
edition = "2021"
description = "Citation graph engine for EPA methods"

[dependencies]
epa-kg-core = { path = "../epa-kg-core" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
petgraph = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1.10"

[dev-dependencies]
tempfile = "3.9"