[package]
name = "epa-kg-ingest"
version = "0.1.0"
edition = "2021"
description = "CLI and Python bridge for document ingestion"

[[bin]]
name = "epa-kg"
path = "src/main.rs"

[dependencies]
epa-kg-core = { path = "../epa-kg-core" }
epa-kg-graph = { path = "../epa-kg-graph" }
epa-kg-api = { path = "../epa-kg-api" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }